--- a/index.html
+++ b/index.html
@@ -4,11 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- UNICONS -->
+    <link rel="stylesheet" href="">
+    <!-- SWIPER CSS -->
+    <link rel="stylesheet" href="">
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="/assest/CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Portfolio</title>
+    <!-- <meta http-equiv="refresh" content="3; ">> -->
+    <link rel="icon" href="asset/images/Savii1234.png">
 </head>
 <body>
-    <section>
-        <h1>Thukiii love you,,,</h1>
-    </section>
+    <header>
+        <nav>
+            <li><a href="#Home" class="active">Home</a></li>
+            <li><a href="#AboutMe">AboutMe</a></li>
+            <li><a href="#skillsTools">Skills & Tools</a></li>
+            <li><a href="#Services">Service</a></li>
+            <li><a href="#Projects">Project</a></li>
+            <li><a href="#Assignment">Assignment</a></li>
+            <li><a href="#ContactMe">Contact</a></li>
+
+        </nav>
+        <div class="socialmedia-icon">
+            <a href="https://www.linkedin.com/in/savindi-dadallage-9a9212248">
+                <i class="fa fa-linkedin-square"></i>
+            </a>
+            <a href="https://github.com/Savindi20">
+                <i class="fa fa-github"></i>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100085639513076&mibextid=ZbWKwL">
+                <i class="fa fa-facebook-official"></i>
+            </a>
+            <a href="https://instagram.com/______savii______?igshid=YmMyMTA2M2Y=">
+                <i class="fa fa-instagram"></i>
+            </a>
+        </div>
+        <button>
+            <h4>let's talk</h4>
+        </button>
+    
+    </header> 
+    <!-- ===== SLIDEBARA ===== -->
+
+    <!-- ===== Main ===== -->
+    <main class="main"></main>
+
+    <!-- ===== FOOTER ===== -->
+
+    <!-- ===== SCROLL UP ===== -->
+
+    <!-- ===== MIXITUP FILTER ===== -->
+    <script src=""></script>
+
+    <!-- ===== Swiper JS ===== -->
+    <script src=""></script>
+
+    <!-- ===== Main JS ===== -->
+    <script src=""></script>
 </body>
 </html>
