--- a/index.html
+++ b/index.html
@@ -125,6 +125,45 @@
         </section>
 
         <!-- ====================  SERVICES  ============================== -->
+        <section class="services section" id="service">
+            <h2 class="section__title">Services</h2>
+            <p class="section__discription">
+                The Service in the Portfolio is the core repository for all information. 
+                Each service is listed along with its current status and history.
+            </p>
+
+            <div class="services__container container grid">
+                <div class="services__item">
+                    <i class="uil uil-layer-group services__icon"></i>
+                    <h3 class="services__title">Website Design</h3>
+                    <p class="services__discription">
+                        This includes creating user-friendly interfaces and ensuring compatibility 
+                        across different devices and browsers.The goal is to create a visually appealing 
+                        and functional website that effectively communicates the desired message to its visitors.
+                    </p>
+                </div>
+
+                <div class="services__item">
+                    <i class="uil uil-desktop services__icon"></i>
+                    <h3 class="services__title">Stand Alone Application</h3>
+                    <p class="services__discription">
+                        This includes creating user-friendly interfaces and ensuring compatibility 
+                        across different devices and browsers.The goal is to create a visually appealing 
+                        and functional website that effectively communicates the desired message to its visitors.
+                    </p>
+                </div>
+
+                <div class="services__item">
+                    <i class="uil uil-mobile-android services__icon"></i>
+                    <h3 class="services__title">Mobile Application</h3>
+                    <p class="services__discription">
+                        The development process requires a strong understanding of programming languages, 
+                        database management, and user interface design. The goal is to create a reliable and 
+                        user-friendly application that meets the needs of its intended audience.
+                    </p>
+                </div>
+            </div>
+        </section>
 
         <!-- ====================  PROJECTS  ============================== -->
 
