project page done

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                                     <span>Web Sites, Web experience</span>
                                 </p>
                                 <p class="tabs__discription">
-                                    <span>Stand alone Application</span> - Development 
-                                    <span>POS System</span>
+                                    <span>Software</span> - Development 
+                                    <span>Data Handling, Front-end, back-end, POS System</span>
                                 </p>
                             </div>
                         </div>
@@ -166,6 +166,82 @@
         </section>
 
         <!-- ====================  PROJECTS  ============================== -->
+        <section class="portfolio section" id="portfolio">
+            <h2 class="section__title">My Projects</h2>
+            <p class="section__discription">
+                projects involves the process of planning, organizing, 
+                and executing a set of tasks to achieve a specific goal or objective
+            </p>
+            
+            <div class="portfolio__container container grid">
+                <div class="portfolio__item">
+                    <img src="assest/images/1 copy.jpg" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Stand Alone Application</p>
+                        <a href="https://github.com/Savindi20/TheFlora">
+                            <h3 class="portfolio__title">The Flora</h3>
+                        </a>
+                        <p class="portfolio__discription">This is Management System for Flower Shop</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="assest/images/2 copy.png" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Website Design</p>
+                        <a href="https://github.com/Savindi20/MyPortfolio">
+                            <h3 class="portfolio__title">My Portfolio</h3>
+                        </a>
+                        <p class="portfolio__discription">This is My First Portfolio Web Design</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="assest/images/3 copy.png" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Stand Alone Application</p>
+                        <a href="https://github.com/Savindi20/Connect-4Game-Assignment">
+                            <h3 class="portfolio__title">Connect-4 Game</h3>
+                        </a>
+                        <p class="portfolio__discription">This is Connect-4 Game System</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="assest/images/4 copy.jpg" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Website Design</p>
+                        <a href="https://github.com/Savindi20/MyPortFolioNew">
+                            <h3 class="portfolio__title">New Portfolio</h3>
+                        </a>
+                        <p class="portfolio__discription">This is My New Portfolio Web Design</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="assest/images/5 copy.jpg" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Stand Alone Application</p>
+                        <a href="https://github.com/Savindi20/MyORMCourseWork">
+                            <h3 class="portfolio__title">ORM D24 Hostel</h3>
+                        </a>
+                        <p class="portfolio__discription">This is Management System for Hostel with Hibernate</p>
+                    </div>
+                </div>
+
+                <div class="portfolio__item">
+                    <img src="assest/images/6 copy.jpg" alt="" class="portfolio__img">
+                    <div class="portfolio__data">
+                        <p class="portfolio__subtitle">Website Design</p>
+                        <a href="https://github.com/Savindi20/HTML-Core">
+                            <h3 class="portfolio__title">HTML-Core</h3>
+                        </a>
+                        <p class="portfolio__discription">This is My Html and CSS Learning Website</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
         <!-- ====================  ASSIGNMENTS ============================== -->
 
