assignment photos added

--- a/index.html
+++ b/index.html
@@ -244,6 +244,75 @@
         </section>
 
         <!-- ====================  ASSIGNMENTS ============================== -->
+        <!-- <section class="assignment section" id="assignment">
+            <h2 class="section__title">My Assignments</h2>
+            <p class="section__discription">
+                Web assignments can be used in a variety of subjects and are often designed 
+                to develop students' critical thinking, communication, and digital literacy skills.
+            </p>
+
+            <div class="assignment__container container grid">
+                <div class="assignment__item">
+                    <img src="assest/images/as1.PNG" alt="" class="assignment__img">
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Web Design</p>
+                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <img src="assest/images/as2.PNG" alt="" class="assignment__img">
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Web Design</p>
+                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                            <h3 class="assignment__title">Assignment 02</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <img src="assest/images/as3.PNG" alt="" class="assignment__img">
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Web Design</p>
+                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                            <h3 class="assignment__title">Assignment 03</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <img src="assest/images/as4.PNG" alt="" class="assignment__img">
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Web Design</p>
+                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                            <h3 class="assignment__title">Assignment 04</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <img src="assest/images/as5.PNG" alt="" class="assignment__img">
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Web Design</p>
+                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                            <h3 class="assignment__title">Assignment 05</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <img src="assest/images/as6.PNG" alt="" class="assignment__img">
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">Web Design</p>
+                        <a href="http://127.0.0.1:5502/Assignment/CSS/CaseOne/Case_One.html">
+                            <h3 class="assignment__title">Assignment 06</h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section> -->
 
         <!-- ====================  CONTACT ME  ============================== -->
     </main>
