assignment form done

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </section>
 
         <!-- ====================  ASSIGNMENTS ============================== -->
-        <!-- <section class="assignment section" id="assignment">
+        <section class="assignment section" id="assignment">
             <h2 class="section__title">My Assignments</h2>
             <p class="section__discription">
                 Web assignments can be used in a variety of subjects and are often designed 
@@ -312,7 +312,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- ====================  CONTACT ME  ============================== -->
     </main>
