contact form added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <!-- <meta http-equiv="refresh" content="3; ">> -->
     <link rel="icon" href="asset/images/Savii1234.png">
 </head>
+
 <body>
     <!-- ====================  HEADER  ============================== -->
     <header>
@@ -42,9 +44,9 @@
         <button>
             <h4>let's talk</h4>
         </button> -->
-    
-    </header> 
-   <!-- ====================  MAIN  ============================== -->
+
+    </header>
+    <!-- ====================  MAIN  ============================== -->
     <main class="main">
 
         <!-- ====================  HOME  ============================== -->
@@ -53,7 +55,7 @@
                 <div class="home__content">
                     <span class="home__subtitle">Welcome to My Portfolio</span>
                     <h1 class="home__title">
-                        Hi, I'm Savindi Dadallage 
+                        Hi, I'm Savindi Dadallage
                         <span> Fullstack Developer.</span>
                         based in Sri Lanka.
                     </h1>
@@ -72,11 +74,11 @@
                     <h2 class="section__title">About Me</h2>
 
                     <p class="about__discription">
-                    Hey,I am Savindi Jayoda Dadallage and I'm 21 years old.
-                    I am currently studying to become an IT Professional in Software Engineering Institute.
-                    I hope to work as a fullstack developer in the near future.
-                    I am currently studying web developing, mobile developing and I am interested in cording, 
-                    music,traveling fitness and photography.
+                        Hey,I am Savindi Jayoda Dadallage and I'm 21 years old.
+                        I am currently studying to become an IT Professional in Software Engineering Institute.
+                        I hope to work as a fullstack developer in the near future.
+                        I am currently studying web developing, mobile developing and I am interested in cording,
+                        music,traveling fitness and photography.
                     </p>
 
                     <div class="tabs__btns">
@@ -88,15 +90,15 @@
                         <div class="tabs__item tab__active" data-content id="skills">
                             <div class="tabs__data grid">
                                 <p class="tabs__discription">
-                                    <span>User experience design</span> - UI/UX 
+                                    <span>User experience design</span> - UI/UX
                                     <span>Delight the user and make it work.</span>
                                 </p>
                                 <p class="tabs__discription">
-                                    <span>Web and User Interface Design</span> - Development 
+                                    <span>Web and User Interface Design</span> - Development
                                     <span>Web Sites, Web experience</span>
                                 </p>
                                 <p class="tabs__discription">
-                                    <span>Software</span> - Development 
+                                    <span>Software</span> - Development
                                     <span>Data Handling, Front-end, back-end, POS System</span>
                                 </p>
                             </div>
@@ -109,11 +111,11 @@
                                     <span>2022-2024</span>
                                 </p>
                                 <p class="tabs__discription">
-                                    <span>Gold Badge in Java</span> - HackerRank 
+                                    <span>Gold Badge in Java</span> - HackerRank
                                     <span>2022</span>
                                 </p>
                                 <p class="tabs__discription">
-                                    <span>Certificate Course in Java , HTML, & MYSQL</span> - SoloLearn 
+                                    <span>Certificate Course in Java , HTML, & MYSQL</span> - SoloLearn
                                     <span>2023</span>
                                 </p>
 
@@ -128,7 +130,7 @@
         <section class="services section" id="service">
             <h2 class="section__title">Services</h2>
             <p class="section__discription">
-                The Service in the Portfolio is the core repository for all information. 
+                The Service in the Portfolio is the core repository for all information.
                 Each service is listed along with its current status and history.
             </p>
 
@@ -137,8 +139,8 @@
                     <i class="uil uil-layer-group services__icon"></i>
                     <h3 class="services__title">Website Design</h3>
                     <p class="services__discription">
-                        This includes creating user-friendly interfaces and ensuring compatibility 
-                        across different devices and browsers.The goal is to create a visually appealing 
+                        This includes creating user-friendly interfaces and ensuring compatibility
+                        across different devices and browsers.The goal is to create a visually appealing
                         and functional website that effectively communicates the desired message to its visitors.
                     </p>
                 </div>
@@ -147,8 +149,8 @@
                     <i class="uil uil-desktop services__icon"></i>
                     <h3 class="services__title">Stand Alone Application</h3>
                     <p class="services__discription">
-                        This includes creating user-friendly interfaces and ensuring compatibility 
-                        across different devices and browsers.The goal is to create a visually appealing 
+                        This includes creating user-friendly interfaces and ensuring compatibility
+                        across different devices and browsers.The goal is to create a visually appealing
                         and functional website that effectively communicates the desired message to its visitors.
                     </p>
                 </div>
@@ -157,8 +159,8 @@
                     <i class="uil uil-mobile-android services__icon"></i>
                     <h3 class="services__title">Mobile Application</h3>
                     <p class="services__discription">
-                        The development process requires a strong understanding of programming languages, 
-                        database management, and user interface design. The goal is to create a reliable and 
+                        The development process requires a strong understanding of programming languages,
+                        database management, and user interface design. The goal is to create a reliable and
                         user-friendly application that meets the needs of its intended audience.
                     </p>
                 </div>
@@ -169,10 +171,10 @@
         <section class="portfolio section" id="portfolio">
             <h2 class="section__title">My Projects</h2>
             <p class="section__discription">
-                projects involves the process of planning, organizing, 
+                projects involves the process of planning, organizing,
                 and executing a set of tasks to achieve a specific goal or objective
             </p>
-            
+
             <div class="portfolio__container container grid">
                 <div class="portfolio__item">
                     <img src="assest/images/1 copy.jpg" alt="" class="portfolio__img">
@@ -247,7 +249,7 @@
         <section class="assignment section" id="assignment">
             <h2 class="section__title">My Assignments</h2>
             <p class="section__discription">
-                Web assignments can be used in a variety of subjects and are often designed 
+                Web assignments can be used in a variety of subjects and are often designed
                 to develop students' critical thinking, communication, and digital literacy skills.
             </p>
 
@@ -315,6 +317,50 @@
         </section>
 
         <!-- ====================  CONTACT ME  ============================== -->
+        <section class="contact section" id="contact">
+            <div class="contact__container container grid">
+                <div class="contact__content">
+                    <h2 class="section__title">Hire Me</h2>
+
+                    <p class="contact__discription">
+                        I am Available for Web Designing & Web Development work.
+                        Connect With me phone :
+                        <a href="tel:+(94)702626097"> +(94)702626097</a>
+                        or email :
+                        <a href="mailto:savindidadallage@gmail.com"> savindidadallage@gmail.com</a>
+                    </p>
+
+                    <form action="" class="contact__form" id="contact-form">
+                        <div class="contact__form-input">
+                            <input type="text" name="Name" placeholder="Your Name *" class="contact__input"
+                                id="contact-name ">
+                        </div>
+
+                        <div class="contact__form-input">
+                            <input type="email" name="Email" placeholder="Your Email" class="contact__input"
+                                id="contact-email ">
+                        </div>
+
+                        <div class="contact__form-input">
+                            <input type="text" name="Subject" placeholder="Write Subject" class="contact__input"
+                                id="contact-Subject ">
+                        </div>
+
+                        <div class="contact__from-input">
+                            <textarea name="message" id="contact-message" class="contact__input textarea "
+                                placeholder="Your Message"></textarea>
+                        </div>
+
+                        <input type="Submit" value="Submit" class="btn">
+
+                        <p class="error__message" id="error-message"></p>
+                    </form>
+                </div>
+
+                <img src="assest/images/Ssavii (2).jpg" alt="" class="contact__img">
+            </div>
+        </section>
+
     </main>
 
     <!-- ====================  FOOTER  ============================== -->
@@ -328,4 +374,5 @@
     <script src="/assest/JS/main.js"></script>
 
 </body>
+
 </html>
