--- a/index.html
+++ b/index.html
@@ -332,18 +332,18 @@
 
                     <form action="" class="contact__form" id="contact-form">
                         <div class="contact__form-input">
-                            <input type="text" name="Name" placeholder="Your Name *" class="contact__input"
-                                id="contact-name ">
+                            <input type="text" name="name" placeholder="Your Name *" class="contact__input"
+                                id="contact-name">
                         </div>
 
                         <div class="contact__form-input">
-                            <input type="email" name="Email" placeholder="Your Email" class="contact__input"
-                                id="contact-email ">
+                            <input type="email" name="email" placeholder="Your Email" class="contact__input"
+                                id="contact-email">
                         </div>
 
                         <div class="contact__form-input">
-                            <input type="text" name="Subject" placeholder="Write Subject" class="contact__input"
-                                id="contact-Subject ">
+                            <input type="text" name="subject" placeholder="Write Subject" class="contact__input"
+                                id="contact-subject">
                         </div>
 
                         <div class="contact__from-input">
@@ -364,11 +364,41 @@
     </main>
 
     <!-- ====================  FOOTER  ============================== -->
+    <fotter class="footer">
+        <div class="footer__container container grid">
+            <a href="index.html" class="footer__logo">Sa<span>vii</span></a>
+
+            <div class="footer__socials">
+                <a href="https://www.facebook.com/profile.php?id=100085639513076&mibextid=ZbWKwL" target="_blank"
+                    class="footer__social-link">
+                    <i class="uil uil-facebook-f"></i>
+                </a>
+
+                <a href="https://www.linkedin.com/in/savindi-dadallage-9a9212248" target="_blank"
+                    class="footer__social-link">
+                    <i class="uil uil-linkedin"></i>
+                </a>
+
+                <a href="https://github.com/Savindi20" target="_blank"
+                    class="footer__social-link">
+                    <i class="uil uil-github"></i>
+                </a>
+
+                <a href="https://instagram.com/______savii______?igshid=YmMyMTA2M2Y=" target="_blank"
+                    class="footer__social-link">
+                    <i class="uil uil-instagram"></i>
+                </a>
+                
+            </div>
+
+            <p class="footer__copyright"> &copy; 2023. All rights reserved.</p>
+        </div>
+    </fotter>
 
     <!-- ====================  SCROLL UP  ============================== -->
 
     <!-- ====================  EMAIL JS ============================== -->
-    <script src=""></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <!-- ====================  MAIN JS ============================== -->
     <script src="/assest/JS/main.js"></script>
