--- a/index.html
+++ b/index.html
@@ -424,6 +424,9 @@
     </fotter>
 
     <!-- ====================  SCROLL UP  ============================== -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="uil uil-angle-up scrollup__icon"></i>
+    </a>
 
     <!-- ====================  EMAIL JS ============================== -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
